--- a/Foresome/Foresome/Onboarding/ForgotPassword/View/ForgotPasswordViewController.xib
+++ b/Foresome/Foresome/Onboarding/ForgotPassword/View/ForgotPasswordViewController.xib
@@ -53,11 +53,11 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FaM-pr-GIQ">
-                            <rect key="frame" x="24" y="213.66666666666669" width="345" height="56"/>
+                            <rect key="frame" x="24" y="215.66666666666669" width="345" height="56"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cjz-S0-71g">
                                     <rect key="frame" x="16" y="0.0" width="329" height="56"/>
-                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
                                     <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                     <userDefinedRuntimeAttributes>
@@ -115,7 +115,7 @@
                         <constraint firstItem="FaM-pr-GIQ" firstAttribute="leading" secondItem="9fK-DQ-gCh" secondAttribute="leading" constant="24" id="A7d-T6-W0T"/>
                         <constraint firstItem="R6r-tH-bNz" firstAttribute="leading" secondItem="fjG-r9-2c3" secondAttribute="leading" id="BSb-hT-oYY"/>
                         <constraint firstItem="R6r-tH-bNz" firstAttribute="trailing" secondItem="fjG-r9-2c3" secondAttribute="trailing" id="DjL-Y0-aBw"/>
-                        <constraint firstItem="FaM-pr-GIQ" firstAttribute="top" secondItem="R6r-tH-bNz" secondAttribute="bottom" constant="30" id="FLf-CW-2h3"/>
+                        <constraint firstItem="FaM-pr-GIQ" firstAttribute="top" secondItem="R6r-tH-bNz" secondAttribute="bottom" constant="32" id="FLf-CW-2h3"/>
                         <constraint firstAttribute="trailing" secondItem="fjG-r9-2c3" secondAttribute="trailing" constant="24" id="HWr-Nw-La3"/>
                         <constraint firstItem="4yF-y1-dS1" firstAttribute="trailing" secondItem="cjz-S0-71g" secondAttribute="trailing" id="aba-sr-XNg"/>
                         <constraint firstItem="R6r-tH-bNz" firstAttribute="top" secondItem="fjG-r9-2c3" secondAttribute="bottom" constant="14" id="hy2-dh-wS6"/>
