--- a/Foresome/Foresome/Onboarding/ProfilePicture/View/ProfilePictureViewController.xib
+++ b/Foresome/Foresome/Onboarding/ProfilePicture/View/ProfilePictureViewController.xib
@@ -70,10 +70,10 @@
                     <rect key="frame" x="0.0" y="100" width="393" height="752"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ueT-Vb-m8E">
-                            <rect key="frame" x="0.0" y="0.0" width="385" height="752"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="752"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_profile_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="E4c-m2-o5A">
-                                    <rect key="frame" x="92.666666666666686" y="24" width="200" height="200"/>
+                                    <rect key="frame" x="96.666666666666686" y="24" width="200" height="200"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="200" id="3PS-ru-zQh"/>
                                         <constraint firstAttribute="width" secondItem="E4c-m2-o5A" secondAttribute="height" multiplier="1:1" id="HYw-ps-Io4"/>
@@ -86,7 +86,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </imageView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="anZ-qi-l5E">
-                                    <rect key="frame" x="24" y="232" width="337" height="33"/>
+                                    <rect key="frame" x="24" y="232" width="345" height="33"/>
                                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                     <state key="normal" title="Upload profile picture">
@@ -97,19 +97,19 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Would you like to add a profile picture?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Uv-jL-cs3">
-                                    <rect key="frame" x="24" y="325" width="337" height="78.666666666666686"/>
+                                    <rect key="frame" x="24" y="325" width="345" height="78.666666666666686"/>
                                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="28"/>
                                     <color key="textColor" red="0.1333333333" green="0.15686274510000001" blue="0.19215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or you can add this later." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mi8-Ak-wgM">
-                                    <rect key="frame" x="24" y="419.66666666666663" width="337" height="21"/>
+                                    <rect key="frame" x="24" y="419.66666666666663" width="345" height="21"/>
                                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
                                     <color key="textColor" red="0.56470588239999997" green="0.57647058819999997" blue="0.59607843140000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IhX-sq-GbK">
-                                    <rect key="frame" x="24" y="598" width="337" height="56"/>
+                                    <rect key="frame" x="24" y="598" width="345" height="56"/>
                                     <color key="backgroundColor" red="0.25098039220000001" green="0.80392156859999997" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="56" id="1eU-iy-tew"/>
@@ -128,7 +128,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="duJ-kf-QCi">
-                                    <rect key="frame" x="24" y="654" width="337" height="56"/>
+                                    <rect key="frame" x="24" y="654" width="345" height="56"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="56" id="Jwi-f8-tbU"/>
                                     </constraints>
@@ -173,7 +173,7 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="ueT-Vb-m8E" firstAttribute="leading" secondItem="iJg-E3-hRX" secondAttribute="leading" id="bi7-3H-jXF"/>
-                        <constraint firstItem="ueT-Vb-m8E" firstAttribute="width" secondItem="iJg-E3-hRX" secondAttribute="width" multiplier="0.979644" id="eTP-C1-nD5"/>
+                        <constraint firstItem="ueT-Vb-m8E" firstAttribute="width" secondItem="iJg-E3-hRX" secondAttribute="width" id="eTP-C1-nD5"/>
                         <constraint firstItem="ueT-Vb-m8E" firstAttribute="height" secondItem="iJg-E3-hRX" secondAttribute="height" priority="250" id="gHF-mf-2TB"/>
                         <constraint firstAttribute="bottom" secondItem="ueT-Vb-m8E" secondAttribute="bottom" id="jla-QJ-qjM"/>
                         <constraint firstItem="ueT-Vb-m8E" firstAttribute="top" secondItem="iJg-E3-hRX" secondAttribute="top" id="mDs-OE-6aq"/>
